--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,8 @@
       // Retrieve the singleton for the GoogleAuth library and set up the client.
       auth2 = gapi.auth2.init({
         // client_id: '855529219378-o5jgbtsdo7juab5gov3bq0qg6b0l2fkg.apps.googleusercontent.com',
-        client_id: '783608753629-rqtcqppue4p8q5cv5l2pjfr81h009guf.apps.googleusercontent.com',
+        client_id: '818015353741-m97ohmk6tpqf067gcgff0kb3i6t4k8go.apps.googleusercontent.com',
+        // client_id: '783608753629-rqtcqppue4p8q5cv5l2pjfr81h009guf.apps.googleusercontent.com',
         cookiepolicy: 'single_host_origin',
         // Request scopes in addition to 'profile' and 'email'
         //scope: 'additional_scope'
