--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130878784-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-130878784-2');
+  </script>
+
   <meta charset="utf-8" />
 
   <title>quick delivery by passengers быстрая доставка пассажирами</title>
   <meta name="description" content="quick delivery by passengers through fly,bus,cars beetween city, country быстрая доставка пассажирами через самолеты, автобусы, автомобилем между городами, странами, سرعة تسليم الركاب عبر الطائرات والحافلات والسيارات بين المدن والبلدان ,Entrega rápida por parte de pasajeros a través de aviones, autobuses, automóviles entre ciudades, países,乘客通過飛機，公共汽車，城市，國家之間的汽車快速交付" />
-<meta name="keywords" content="quick delivery by passengers through fly,bus,cars beetween city, country быстрая доставка пассажирами через самолеты, автобусы, автомобилем между городами, странами, سرعة تسليم الركاب عبر الطائرات والحافلات والسيارات بين المدن والبلدان ,Entrega rápida por parte de pasajeros a través de aviones, autobuses, automóviles entre ciudades, países,乘客通過飛機，公共汽車，城市，國家之間的汽車快速交付" />
-<meta name="author" content="quick delivery by passengers">
+  <meta name="keywords" content="quick delivery by passengers through fly,bus,cars beetween city, country быстрая доставка пассажирами через самолеты, автобусы, автомобилем между городами, странами, سرعة تسليم الركاب عبر الطائرات والحافلات والسيارات بين المدن والبلدان ,Entrega rápida por parte de pasajeros a través de aviones, autobuses, automóviles entre ciudades, países,乘客通過飛機，公共汽車，城市，國家之間的汽車快速交付" />
+  <meta name="author" content="quick delivery by passengers">
 <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" /> -->
 
 
@@ -101,6 +112,14 @@
           //alert(JSON.stringify(error, undefined, 2));
         });
   }
+
+
+  // localStorage.setItem("email","gulim10071991@gmail.com");
+  // localStorage.setItem("name","Gulim Kanatovna");
+  // localStorage.setItem("image_url","Gulim Kanatovna");
+  // localStorage.setItem("role","1");
+  // localStorage.setItem("status","enable");
+  // localStorage.setItem("login","enable");
 
 
   </script>
